# ConstraintAPIBench

./: .env  .gitignore  README.md  ShengEtAl_utterance_generation.py  constraint_extraction.py  evaluating_constraints.py  evaluation.py  getting_APIs.py  parameter_generation.py  pyproject.toml  requirements.txt  selecting_APIs_evaluation.py  sheng_utterance_generation.py  testing.py  toolalpaca_utterance_generation.py  utterance_generation.py
config/: config_gen_data.yaml  config_quality_evaluation.yaml  config_retriever_dataset_preprocess.yaml  config_retriever_training.yaml
data/constraints_gt/: binip_checker.json  caiso.json  candlestick_chart.json  covid_19_by_api_ninjas.json  cricket_live_data.json  domainr.json  extract_news.json  find_any_ip_address_or_domain_location_world_wide.json  football_prediction.json  forecast.json  forward_reverse_geocoding.json  google_translate.json  google_web_search.json  horse_racing.json  india_pincode_with_latitude_and_longitude.json  ip_geolocation_ipwhois_io.json  isitwater_com.json  latest_stock_price.json  lingua_robot.json  live_metal_prices.json  microsoft_authenticator.json  moviesdatabase.json  mymemory_translation_memory.json  newscatcher.json  nlp_translation.json  omniinfer.json  pen_to_print_handwriting_ocr.json  phonenumbervalidatefree.json  planets_by_api_ninjas.json  quality_porn.json  reverse_geocoding_and_geolocation_service.json  sentiment_analysis.json  solarenergyprediction.json  tasty.json  (+10 more)
scripts/: cap_generation.py  retrieval_dataset.py  retrieval_train.py  sheng_generation.py  toolalpaca_generation.py
(+2713 files in other folders)
