[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraintapibench"
version = "0.1.0"
description = "Constraint API Benchmark data generation tools"
authors = [{ name = "Vitor Santos" }]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
